{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "d741a3a4-3e2d-4892-97d2-34ee27ded3f8",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "2fd62112-5b97-4c7b-98d3-29607a2bd1e9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "690187e9-6427-4039-89dd-c76cef6fdb74",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2165c5ba-b86b-4ce2-b1d4-b8078baa4715",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Computer",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4701b219-fd38-4855-a058-0594f1ec560a",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Computer",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Computer",
            "bindingGroup": "Computer",
            "devices": [
                {
                    "devicePath": "<VirtualMouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}